--- a/html/carrito.html
+++ b/html/carrito.html
@@ -12,10 +12,7 @@
         <nav>
             <a href="../index.html"><img src="../img/Designer.png" alt="logo"></a>
             <div>
-                <a href="../index.html">Anime</a>
-                <a href="../index.html">Accion</a>
-                <a href="../index.html">Terror</a>
-                <a href="../index.html">Romance</a>
+                <a href="../index.html">Peliculas</a>
                 <a href="./carrito.html" id="carrito"><img src="../img/carrito-de-compras.png" id="logo" alt="Carro de compras"><span id="contador">0</span></a>
             </div>
         </nav>
@@ -26,8 +23,8 @@
         <section id="total">
             <p>Total: <span id="unidad">0</span></p>
             <p>Total precio: $ <span id="precio">0</span></p>
-            <button disabled>Comprar</button>
-            <button id="reiniciar">Reiniciar</button>
+            <button id="comprar">Finalizar Compra</button>
+            <button id="reiniciar">Vaciar Carrito</button>
 
         </section>
     </main>
