--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
         <nav>
             <a href="./index.html"><img src="./img/Designer.png" alt="logo"></a>
             <div>
-                <a href="#">Anime</a>
-                <a href="#">Accion</a>
-                <a href="#">Terror</a>
-                <a href="#">Romance</a>
+                <a href="index.html">Peliculas</a>
                 <a href="./html/carrito.html" id="carrito"><img src="./img/carrito-de-compras.png" id="logo" alt="Carro de compras"><span id="contador">0</span></a>
             </div>
         </nav>
     </header>
     <main>
+        <section>
+            <div>
+                <h1 class="text-center">Buscador</h1>
+                <input type="search" class="Buscador" id="buscador">
+            </div>
+        </section>
         <section id="p_container"></section>
     </main>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
